# jupyter-translate

./: .gitignore  LICENSE  README.md  environment.yml  intructions_googlecolab.md  jupyter_translate.py  jupyter_translate_pt2en.py  playground.ipynb  pytest.ini  requirements.txt  setup.cfg  setup.py  test_Notebook_en.ipynb  test_jupyter_translate.ipynb
.github/workflows/: deploy-to-pypi.yml  test.yml
dev/: playground.ipynb  test_jupyter_translate.ipynb
legacy/: jupyter_translate.py  jupyter_translate_pt2en.py
tests/: README.md  conftest.py  test_integration.py  test_unit.py
tests/data/: test_Notebook_pt.ipynb
