[metadata]
name = jupyter-translate
description = A Python script for translating Jupyter notebook files.
author = Fernando Marcos Wittmann & Andre Belem
license = MIT
license_files = LICENSE

[options]
python_requires = >=3.7

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=2.12.0

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_* 